--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
       "module": "ESNext",
       "target": "es2021",
       "rootDir": "src",
-      "declaration": true,
-      "declarationDir": "./dist/types",
+      "declaration": false,
       "noEmit": true,
       "strict": true,
       "esModuleInterop": true,
