--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "rollup": "^4.9.5",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^2.0.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
