--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rollup/plugin-json": "^6.1.0",
     "open-godfather": "github:vladgitx/open-godfather"
   },
   "devDependencies": {
@@ -24,7 +25,6 @@
     "eslint-config-prettier": "^9.1.0",
     "rollup": "^4.9.5",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-delete": "^2.0.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.7.0"
