Add samp-node types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "moduleResolution": "node",
+      "types": ["@sa-mp/node"],
       "paths": {
         "@/*": ["./src/*"]
       }
