--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@sa-mp/node": "^0.2.0",
     "@types/node": "^20.5.7",
     "rollup": "^4.9.5",
     "rollup-plugin-copy": "^3.5.0",
